--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,7 +1,11 @@
-name: Publish Docker image
-on:
-  release:
-    types: [published]
+name: java ci with gradle
+
+on: 
+   push:
+     branches:  [main]
+   pull_request:
+     branches:  [main]
+
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
