--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,22 +1,16 @@
-name: java ci with gradle
-
+name: docker image push
 on: 
    push:
-     branches:  [main]
+     branches:  [master]
    pull_request:
-     branches:  [main]
-
+     branches:  [master]
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: tinku13/nginx_img
-          tag_with_ref: true
+   builds:
+       runs-on: ubuntu-latest
+       steps:
+       - name: Build and push Docker images
+         uses: docker/build-push-action@v1
+         run : |
+           echo "${{ secrets.DOCKER_PASSWORD }}"  | docker login -u "tinku13" --password-stdin
+           docker image built -t  tinku13/ci-cd-test
+           docker push tinku13/os-img
