--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,9 +1,9 @@
 name: docker image push
 on: 
    push:
-     branches:  [master]
+     branches:  [main]
    pull_request:
-     branches:  [master]
+     branches:  [main]
 jobs:
    builds:
        runs-on: ubuntu-latest
