--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,16 +1,33 @@
-name: docker image push
-on: 
-   push:
-     branches:  [master]
-   pull_request:
-     branches:  [master]
+name: ci
+
+on:
+  push:
+    branches:
+      - 'master'
+
 jobs:
-   builds:
-       runs-on: ubuntu-latest
-       steps:
-       - name: Build and push Docker images
-         uses: docker/build-push-action@v1
-         run : |
-           echo "${{ secrets.DOCKER_PASSWORD }}"  | docker login -u "tinku13" --password-stdin
-           docker image built -t  tinku13/ci-cd-test
-           docker push tinku13/os-img
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: user/app:latest
