--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -1,28 +1,25 @@
-name: ci
-
+---
+name: Publish Docker images to Docker Hub
 on:
   push:
-    branches:
-      - 'master'
-
+      branches: [ master ] # Set which branch to trigger this flow, e.q. [ master, develop ]
 jobs:
-  docker:
-    runs-on: ubuntu-latest
+  push_images_to_dockerhub:
+    name: Push images to Docker Hub
+    runs-on: ubuntu-18.04
     steps:
-    
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v1 
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Build and push
-        id: docker_build
+      - name: Build and push image
+        id: build_publish_image
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./dockerfile
           push: true
-          tags: user/app:latest
+          tags: ${{ secrets.DOCKER_USERNAME}}/${{ secrets.DOCKER_USERNAME }}:latest
